--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,8 +1,11 @@
-# ┓┏      ┓   ┓
-# ┣┫┓┏┏┓┏┓┃┏┓┏┃┏
-# ┛┗┗┫┣┛┛ ┗┗┛┗┛┗
-#    ┛┛
 
+# ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
+# ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝
+# ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ██║   ██║██║     █████╔╝ 
+# ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██║   ██║██║     ██╔═██╗ 
+# ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
+# ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
+                                                                  
 
 general {
     hide_cursor = true
@@ -17,66 +20,127 @@ background {
     blur_passes = 0
 }
 
-source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
+label {
+  monitor = 
+  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/song-status)"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 14
+  font_family = SF Pro Text
+  position = 10, 355
+  halign = left
+  valign = center
+}
 
 label {
-    monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%I") </big></b>"
-    color = white
-    font_size = 80
-    font_family = JetBrains Mono ExtraBold
-    position = 0, 160
-    halign = center
-    valign = center
+  monitor =
+  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/network-status)"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 15
+  font_family = FiraCode Nerd Font
+  position = -10, 355
+  halign = right
+  valign = center
+}
+
+label {
+  monitor =
+  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/battery-status)"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 16
+  font_family = SF Pro Text
+  position = -50, 353
+  halign = right
+  valign = center
 }
 
 label {
     monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%M") </big></b>"
-    color = white
-    font_size = 80
-    font_family = JetBrains Mono ExtraBold
-    position = 0, 60
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = cmd[update:1000] echo "<b><big> $(date +"%d %b") </big></b>"
-    color = $color5
+    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/weather)"
+    color = rgba(255, 255, 255, 1)
     font_size = 16
-    font_family = IBM Plex Sans Medium 10
-    position = 0, 30
+    font_family = SF Pro Text 
+    position = 0, 80
+    halign = center
+    valign = center
+}
+
+label {
+  monitor =
+  text = cmd[update:1000] echo "$(date +"%A, %B %d")"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 20
+  font_family = SF Pro Display Bold
+  position = 0, 260
+  halign = center
+  valign = center
+}
+
+label {
+  monitor = 
+  text = cmd[update:1000] echo "$(date +"%I:%M")"
+  color = rgba(242, 243, 244, 0.75)
+  font_size = 93
+  font_family = SF Pro Display Bold
+  position = 0, 120
+  halign = center
+  valign = center
+}
+
+image {
+    monitor =
+    path = ~/.config/hypr/images/user.png 
+    border_color = 0xffdddddd
+    border_size = 0
+    size = 73
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
+    position = 0, -200
     halign = center
     valign = center
 }
 
 label {
     monitor =
-    text = Hello $USER :3
-    color = $color7
-    font_size = 20
-    font_family = JetBrains Mono Light
-    position = 0, -20
+    text = $USER
+    color = rgba(242, 243, 244, 0.75)
+    font_size = 12
+    font_family = SF Pro Display Bold
+    position = 0, -270
     halign = center
     valign = center
+}
+
+label {
+    monitor =
+    text = Enter Password
+    color = rgba(242, 243, 244, 0.75)
+    font_size = 10
+    font_family = SF Pro Display
+    position = 0, 80
+    halign = center
+    valign = bottom
 }
 
 input-field {
     monitor =
-    size = 230, 40
+    size = 300, 30
     outline_thickness = 0
-    dots_size = 0.2
-    dots_spacing = 0.4
+    dots_size = 0.25
+    dots_spacing = 0.55
     dots_center = true
-    inner_color = $color1
-    font_color = $color7
+    outer_color = rgba(0,0,0,0)
+    inner_color = rgba(0,0,0,0)
+    font_color = rgba(242, 243, 244, 0.75)
     fade_on_empty = false
-    placeholder_text = <span foreground='white'><i>Password</i></span>
-    fail_color = $color7
+    placeholder_text =
+    check_color = rgba(0,0,0,0)
+    fail_color = rgba(0,0,0,0)
+    fail_text = $FAIL <b>($ATTEMPTS)</b>
+    fail_transition = 300
     hide_input = false
-    position = 0, -70
+    position = 0, 40
     halign = center
-    valign = center
+    valign = bottom
 }
