--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -13,12 +13,13 @@ $MOD = SUPER
 # Wallpaper
 bind = $MOD SHIFT, W, exec, $scripts/wallpaper
 
-# Application shortcuts
+# Shortcuts
 bind = $MOD, RETURN, exec, alacritty
 bind = $MOD, D, exec, dolphin
 bind = $MOD, SPACE, exec, pkill rofi || rofi -show drun
 bind = $MOD SHIFT, E, exec, pkill wleave || wleave --protocol layer-shell -b 5 -T 360 -B 360
 bind = $MOD SHIFT, R, exec, hyprctl reload
+bind = $MOD, L, exec, hyprlock
 
 # Window Management
 bind = $MOD, Q, killactive
