--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,18 +1,18 @@
-$background = rgb(07090A)
-$foreground = rgb(E0E0E3)
-$color0 = rgb(07090A)
-$color1 = rgb(1F2627)
-$color2 = rgb(463F3D)
-$color3 = rgb(594B48)
-$color4 = rgb(9A2E0A)
-$color5 = rgb(BA5825)
-$color6 = rgb(7C7C83)
-$color7 = rgb(CACACE)
-$color8 = rgb(8D8D90)
-$color9 = rgb(293234)
-$color10 = rgb(5D5351)
-$color11 = rgb(776460)
-$color12 = rgb(CD3D0E)
-$color13 = rgb(F87532)
-$color14 = rgb(A6A5AE)
-$color15 = rgb(CACACE)
+$background = rgb(080808)
+$foreground = rgb(E1E0D5)
+$color0 = rgb(080808)
+$color1 = rgb(242322)
+$color2 = rgb(484540)
+$color3 = rgb(49473D)
+$color4 = rgb(4B4843)
+$color5 = rgb(6D6A58)
+$color6 = rgb(7F7C65)
+$color7 = rgb(CCCABA)
+$color8 = rgb(8F8D83)
+$color9 = rgb(302F2D)
+$color10 = rgb(605C56)
+$color11 = rgb(615E51)
+$color12 = rgb(646059)
+$color13 = rgb(928D75)
+$color14 = rgb(AAA587)
+$color15 = rgb(CCCABA)
