--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,9 +143,9 @@ source = auto
 gradient = 1
 
 gradient_count = 3
-gradient_color_1 = '#594B48'
-gradient_color_2 = '#CD3D0E'
-gradient_color_3 = '#F87532'
+gradient_color_1 = '#49473D'
+gradient_color_2 = '#646059'
+gradient_color_3 = '#928D75'
 
 [color]
 
