--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -115,12 +115,8 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 layerrule = blur, waybar
 layerrule = blur, rofi
+layerrule = blur, dunst
 layerrule = ignorezero, waybar
 layerrule = ignorezero, rofi
+layerrule = ignorezero, dunst
 layerrule = xray 1, rofi
-layerrule = blur, swaync-control-center
-layerrule = blur, swaync-notification-window
-layerrule = ignorezero, swaync-control-center
-layerrule = ignorezero, swaync-notification-window
-layerrule = ignorealpha 0.1, swaync-control-center
-layerrule = ignorealpha 0.1, swaync-notification-window
