--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -24,7 +24,7 @@ label {
   monitor = 
   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/song-status)"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 14
+  font_size = 12
   font_family = SF Pro Text
   position = 10, 355
   halign = left
@@ -35,7 +35,7 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/network-status)"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 15
+  font_size = 14
   font_family = FiraCode Nerd Font
   position = -10, 355
   halign = right
@@ -46,7 +46,7 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(~/.config/hypr/scripts/battery-status)"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 16
+  font_size = 14
   font_family = SF Pro Text
   position = -50, 353
   halign = right
@@ -96,7 +96,7 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd = 
-    position = 0, -200
+    position = 0, -220
     halign = center
     valign = center
 }
@@ -118,20 +118,20 @@ label {
     color = rgba(242, 243, 244, 0.75)
     font_size = 10
     font_family = SF Pro Display
-    position = 0, 80
+    position = 0, 40
     halign = center
     valign = bottom
 }
 
 input-field {
     monitor =
-    size = 300, 30
+    size = 160, 30
     outline_thickness = 0
     dots_size = 0.25
     dots_spacing = 0.55
     dots_center = true
     outer_color = rgba(0,0,0,0)
-    inner_color = rgba(0,0,0,0)
+    inner_color = rgba(242, 243, 244, 0.15)
     font_color = rgba(242, 243, 244, 0.75)
     fade_on_empty = false
     placeholder_text =
@@ -140,7 +140,7 @@ input-field {
     fail_text = $FAIL <b>($ATTEMPTS)</b>
     fail_transition = 300
     hide_input = false
-    position = 0, 40
+    position = 0, 60
     halign = center
     valign = bottom
 }
