--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -78,3 +78,25 @@ bind = $MOD SHIFT, 7, movetoworkspace, 7
 bind = $MOD SHIFT, 8, movetoworkspace, 8
 bind = $MOD SHIFT, 9, movetoworkspace, 9
 bind = $MOD SHIFT, 0, movetoworkspace, 10
+
+
+# Screenshots
+bind = , Print, exec, $scripts/screenshot --selection
+bind = SHIFT, Print, exec, $scripts/screenshot --full
+
+# Media Keys
+bindel = , xf86audioraisevolume, exec, $scripts/volume --inc
+bindel = , xf86audiolowervolume, exec, $scripts/volume --dec
+bindl = , xf86AudioMicMute, exec, $scripts/volume --toggle-mic
+bindl = , xf86audiomute, exec, $scripts/volume --toggle
+
+bindl = , xf86AudioPlayPause, exec, $scripts/mediactrl --pause
+bindl = , xf86AudioPause, exec, $scripts/mediactrl --pause
+bindl = , xf86AudioPlay, exec, $scripts/mediactrl --pause
+bindl = , xf86AudioNext, exec, $scripts/mediactrl --nxt
+bindl = , xf86AudioPrev, exec, $scripts/mediactrl --prv
+bindl = , xf86audiostop, exec, $scripts/mediactrl --stop
+
+# Brightness
+binde = , xf86MonBrightnessDown, exec, $scripts/brightness --dec
+binde = , xf86MonBrightnessUp, exec, $scripts/brightness --inc
