--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,7 +7,7 @@
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═══╝╚═════╝ 
                                                                    
 $configs = $HOME/.config/hypr/configs
-$scripts = $HOME/.config/hypr/scripts
+$scripts = $HOME/.config/hypr/bin
 
 # Sourcing configs
 source= $configs/env.conf
@@ -15,6 +15,5 @@ source= $configs/startup.conf
 source= $configs/monitors.conf
 source= $configs/rules.conf
 source= $configs/binds.conf
-source= $configs/laptop.conf
 source= $configs/general.conf
 source= $configs/workspaces.conf
