--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -6,6 +6,7 @@
 # ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
                                                                   
+$hypr=~/.config/hypr/bin
 
 general {
     hide_cursor = true
@@ -22,7 +23,7 @@ background {
 
 label {
   monitor = 
-  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/song-status)"
+  text = cmd[update:1000] echo "$($hypr/song-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 12
   font_family = SF Pro Text
@@ -33,7 +34,7 @@ label {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/network-status)"
+  text = cmd[update:1000] echo "$($hypr/network-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = FiraCode Nerd Font
@@ -44,7 +45,7 @@ label {
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$(~/.config/hypr/scripts/battery-status)"
+  text = cmd[update:1000] echo "$($hypr/battery-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = SF Pro Text
@@ -53,16 +54,18 @@ label {
   valign = center
 }
 
-label {
-    monitor =
-    text = cmd[update:1000] echo "$(~/.config/hypr/scripts/weather)"
-    color = rgba(255, 255, 255, 1)
-    font_size = 16
-    font_family = SF Pro Text 
-    position = 0, 80
-    halign = center
-    valign = center
-}
+# works but slow asf
+#
+# label {
+#     monitor =
+#     text = cmd[update:1000] echo "$($hypr/weather)"
+#     color = rgba(255, 255, 255, 1)
+#     font_size = 16
+#     font_family = SF Pro Text 
+#     position = 0, 80
+#     halign = center
+#     valign = center
+# }
 
 label {
   monitor =
