--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,18 +1,18 @@
-$background = rgb(080808)
-$foreground = rgb(E1E0D5)
-$color0 = rgb(080808)
-$color1 = rgb(242322)
-$color2 = rgb(484540)
-$color3 = rgb(49473D)
-$color4 = rgb(4B4843)
-$color5 = rgb(6D6A58)
-$color6 = rgb(7F7C65)
-$color7 = rgb(CCCABA)
-$color8 = rgb(8F8D83)
-$color9 = rgb(302F2D)
-$color10 = rgb(605C56)
-$color11 = rgb(615E51)
-$color12 = rgb(646059)
-$color13 = rgb(928D75)
-$color14 = rgb(AAA587)
-$color15 = rgb(CCCABA)
+$background = rgb(09090A)
+$foreground = rgb(F6EBC9)
+$color0 = rgb(09090A)
+$color1 = rgb(6C473D)
+$color2 = rgb(47596E)
+$color3 = rgb(BC465D)
+$color4 = rgb(8675B5)
+$color5 = rgb(5898A7)
+$color6 = rgb(AC944B)
+$color7 = rgb(EADAA9)
+$color8 = rgb(A49876)
+$color9 = rgb(905F51)
+$color10 = rgb(5F7792)
+$color11 = rgb(FB5D7C)
+$color12 = rgb(B29CF1)
+$color13 = rgb(75CBDF)
+$color14 = rgb(E6C564)
+$color15 = rgb(EADAA9)
