--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -91,6 +91,7 @@ windowrulev2 = float,class:^(Spotify)$
 
 windowrulev2 = pin,title:^(Picture-in-Picture|Firefox)$
 
+windowrulev2 = size 50% 45%,title:^(neofetch|fastfetch)$
 windowrulev2 = size 50% 70%,title:^(Open File|Save File)$
 windowrulev2 = size 60% 70%,title:^(Save As|Save Image)$
 windowrulev2 = size 70% 65%,class:^(org.kde.dolphin)$
@@ -100,6 +101,7 @@ windowrulev2 = size 75% 85%,class:^(discord|WebCord)$
 windowrulev2 = size 40% 55%,class:^([Ss]team)$,title:^(Friends List)$
 windowrulev2 = size 35% 90%,class:^([Ss]team)$,title:^(Special Offers)$
 
+windowrulev2 = center,title:^(neofetch|fastfetch)$
 windowrulev2 = center 1,title:^(Open File|Save File|Save As|Save Image)$
 windowrulev2 = center 1,class:^(discord|WebCord)$
 windowrulev2 = center 1,class:^(Spotify)$
@@ -120,3 +122,4 @@ layerrule = ignorezero, waybar
 layerrule = ignorezero, rofi
 layerrule = ignorezero, dunst
 layerrule = xray 1, rofi
+layerrule = xray 1, dunst
