--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -13,6 +13,8 @@
 
   "modules-left": [
     "custom/arch",
+    "custom/separatorB",
+    "hyprland/window",
     "hyprland/workspaces",
     "custom/lizzy"
   ],
@@ -85,6 +87,26 @@
     "persistent-workspaces": {
       "*": 4
     }
+  },
+
+  "hyprland/window": {
+    "format": "{initialTitle}",
+    "rewrite": {
+      "": "Home",
+      "kitty": "Terminal",
+      "alacritty": "Terminal",
+      "Mozilla Firefox": "Firefox",
+      "chat.openai.com_/": "ChatGPT 3.5",
+      "web.whatsapp.com_/": "Whatsapp Web",
+      "neofetch": "About PC",
+      "fastfetch": "About PC",
+      "Enter name of file to save to…": "Save File",
+      "Beeper (.*)": "Beeper",
+      "(.*) Thorium": "Thorium",
+      "Spotify Free": "Spotify",
+      "Spotify Premium": "Spotify",
+    },
+    "tooltip": false
   },
 
   "cpu": {
