--- a/.config/alacritty/themes/wallust.toml
+++ b/.config/alacritty/themes/wallust.toml
@@ -1,30 +1,30 @@
 
 [colors.primary]
-background = '#09090A'
-foreground = '#F6EBC9'
+background = '#0D0C0C'
+foreground = '#EBE9E6'
 
 [colors.cursor]
-text = '#EADAA9'
-cursor = '#F6EBC9'
+text = '#DAD7D3'
+cursor = '#EBE9E6'
 
 # Normal colors
 [colors.normal]
-black   = '#A49876'
-red     = '#905F51'
-green   = '#5F7792'
-yellow  = '#FB5D7C'
-blue    = '#B29CF1'
-magenta = '#75CBDF'
-cyan    = '#E6C564'
-white   = '#EADAA9'
+black   = '#999793'
+red     = '#433E3B'
+green   = '#4A4542'
+yellow  = '#BD383B'
+blue    = '#76736F'
+magenta = '#797773'
+cyan    = '#C6C0B7'
+white   = '#DAD7D3'
 
 # Bright colors
 [colors.bright]
-black   = '#09090A'
-red     = '#6C473D'
-green   = '#47596E'
-yellow  = '#BC465D'
-blue    = '#8675B5'
-magenta = '#5898A7'
-cyan    = '#AC944B'
-white   = '#EADAA9'
+black   = '#0D0C0C'
+red     = '#322E2C'
+green   = '#373431'
+yellow  = '#8E2A2C'
+blue    = '#585754'
+magenta = '#5B5956'
+cyan    = '#959089'
+white   = '#DAD7D3'
