--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,18 +1,18 @@
-$background = rgb(09090A)
-$foreground = rgb(F6EBC9)
-$color0 = rgb(09090A)
-$color1 = rgb(6C473D)
-$color2 = rgb(47596E)
-$color3 = rgb(BC465D)
-$color4 = rgb(8675B5)
-$color5 = rgb(5898A7)
-$color6 = rgb(AC944B)
-$color7 = rgb(EADAA9)
-$color8 = rgb(A49876)
-$color9 = rgb(905F51)
-$color10 = rgb(5F7792)
-$color11 = rgb(FB5D7C)
-$color12 = rgb(B29CF1)
-$color13 = rgb(75CBDF)
-$color14 = rgb(E6C564)
-$color15 = rgb(EADAA9)
+$background = rgb(0D0C0C)
+$foreground = rgb(EBE9E6)
+$color0 = rgb(0D0C0C)
+$color1 = rgb(322E2C)
+$color2 = rgb(373431)
+$color3 = rgb(8E2A2C)
+$color4 = rgb(585754)
+$color5 = rgb(5B5956)
+$color6 = rgb(959089)
+$color7 = rgb(DAD7D3)
+$color8 = rgb(999793)
+$color9 = rgb(433E3B)
+$color10 = rgb(4A4542)
+$color11 = rgb(BD383B)
+$color12 = rgb(76736F)
+$color13 = rgb(797773)
+$color14 = rgb(C6C0B7)
+$color15 = rgb(DAD7D3)
