--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -11,15 +11,15 @@
 $MOD = SUPER
 
 # Wallpaper
-bind = $MOD SHIFT, W, exec, $scripts/wallpaper
+bind = $MOD SHIFT, W, exec, wallpaper
 
 # Shortcuts
 bind = $MOD, RETURN, exec, alacritty
 bind = $MOD, D, exec, dolphin
-bind = $MOD, SPACE, exec, pkill rofi || rofi -show drun
-bind = $MOD SHIFT, E, exec, pkill wleave || wleave --protocol layer-shell -b 5 -T 360 -B 360
+bind = $MOD, SPACE, exec, rofi -show drun -replace
 bind = $MOD SHIFT, R, exec, hyprctl reload
-bind = $MOD, L, exec, hyprlock
+bind = SHIFT $MOD , Q, exec, hyprctl dispatch exit
+bind = CTRL $MOD , Q, exec, hyprlock
 
 # Window Management
 bind = $MOD, Q, killactive
@@ -81,22 +81,25 @@ bind = $MOD SHIFT, 0, movetoworkspace, 10
 
 
 # Screenshots
-bind = , Print, exec, $scripts/screenshot --selection
-bind = SHIFT, Print, exec, $scripts/screenshot --full
+bind = , Print, exec, screenshot --selection
+bind = SHIFT, Print, exec, screenshot --full
 
 # Media Keys
-bindel = , xf86audioraisevolume, exec, $scripts/volume --inc
-bindel = , xf86audiolowervolume, exec, $scripts/volume --dec
-bindl = , xf86AudioMicMute, exec, $scripts/volume --toggle-mic
-bindl = , xf86audiomute, exec, $scripts/volume --toggle
+bindel = , xf86audioraisevolume, exec, volume --inc
+bindel = , xf86audiolowervolume, exec, volume --dec
+bindl = , xf86AudioMicMute, exec, volume --toggle-mic
+bindl = , xf86audiomute, exec, volume --toggle
 
-bindl = , xf86AudioPlayPause, exec, $scripts/mediactrl --pause
-bindl = , xf86AudioPause, exec, $scripts/mediactrl --pause
-bindl = , xf86AudioPlay, exec, $scripts/mediactrl --pause
-bindl = , xf86AudioNext, exec, $scripts/mediactrl --nxt
-bindl = , xf86AudioPrev, exec, $scripts/mediactrl --prv
-bindl = , xf86audiostop, exec, $scripts/mediactrl --stop
+bindl = , xf86AudioPlayPause, exec, mediactrl --pause
+bindl = , xf86AudioPause, exec, mediactrl --pause
+bindl = , xf86AudioPlay, exec, mediactrl --pause
+bindl = , xf86AudioNext, exec, mediactrl --nxt
+bindl = , xf86AudioPrev, exec, mediactrl --prv
+bindl = , xf86audiostop, exec, mediactrl --stop
 
 # Brightness
-binde = , xf86MonBrightnessDown, exec, $scripts/brightness --dec
-binde = , xf86MonBrightnessUp, exec, $scripts/brightness --inc
+binde = , xf86MonBrightnessDown, exec, brightness --dec
+binde = , xf86MonBrightnessUp, exec, brightness --inc
+
+# Power Button
+bind = , xf86PowerOff, exec, wlogout -b 2
