--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -6,7 +6,7 @@
 # ███████╗██║ ╚████║ ╚████╔╝ 
 # ╚══════╝╚═╝  ╚═══╝  ╚═══╝  
                            
-env = PATH,$PATH:$HOME/.cargo/bin
+env = PATH,$HOME/.cargo/bin:$scripts:$PATH"
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
