--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -96,7 +96,7 @@ windowrulev2 = size 50% 70%,title:^(Open File|Save File)$
 windowrulev2 = size 60% 70%,title:^(Save As|Save Image)$
 windowrulev2 = size 70% 65%,class:^(org.kde.dolphin)$
 windowrulev2 = size 40% 50%,class:^(firefox)$,title:^(Firefox - Choose User Profile)$
-windowrulev2 = size 75% 85%,class:^(Spotify)$
+windowrulev2 = size 60% 80%,class:^(Spotify)$
 windowrulev2 = size 75% 85%,class:^(discord|WebCord)$
 windowrulev2 = size 40% 55%,class:^([Ss]team)$,title:^(Friends List)$
 windowrulev2 = size 35% 90%,class:^([Ss]team)$,title:^(Special Offers)$
@@ -104,7 +104,7 @@ windowrulev2 = size 35% 90%,class:^([Ss]team)$,title:^(Special Offers)$
 windowrulev2 = center,title:^(neofetch|fastfetch)$
 windowrulev2 = center 1,title:^(Open File|Save File|Save As|Save Image)$
 windowrulev2 = center 1,class:^(discord|WebCord)$
-windowrulev2 = center 1,class:^(Spotify)$
+windowrulev2 = center,class:^(Spotify)$
 windowrulev2 = center 1,class:^(steam)$,title:^(Special Offers)$
 windowrulev2 = center 1,class:^(steam)$,title:^(Friends List)$
 
@@ -116,10 +116,7 @@ windowrulev2 = idleinhibit fullscreen, title:^(*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 layerrule = blur, waybar
-layerrule = blur, rofi
-layerrule = blur, dunst
 layerrule = ignorezero, waybar
+layerrule = blur, rofi
 layerrule = ignorezero, rofi
-layerrule = ignorezero, dunst
 layerrule = xray 1, rofi
-layerrule = xray 1, dunst
