--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,18 +1,18 @@
-$background = rgb(0D0C0C)
-$foreground = rgb(EBE9E6)
-$color0 = rgb(0D0C0C)
-$color1 = rgb(322E2C)
-$color2 = rgb(373431)
-$color3 = rgb(8E2A2C)
-$color4 = rgb(585754)
-$color5 = rgb(5B5956)
-$color6 = rgb(959089)
-$color7 = rgb(DAD7D3)
-$color8 = rgb(999793)
-$color9 = rgb(433E3B)
-$color10 = rgb(4A4542)
-$color11 = rgb(BD383B)
-$color12 = rgb(76736F)
-$color13 = rgb(797773)
-$color14 = rgb(C6C0B7)
-$color15 = rgb(DAD7D3)
+$background = rgb(020506)
+$foreground = rgb(D7D3D5)
+$color0 = rgb(020506)
+$color1 = rgb(0D191D)
+$color2 = rgb(251C22)
+$color3 = rgb(43232C)
+$color4 = rgb(383A3E)
+$color5 = rgb(635B60)
+$color6 = rgb(696064)
+$color7 = rgb(BDB7BA)
+$color8 = rgb(848082)
+$color9 = rgb(112126)
+$color10 = rgb(31252D)
+$color11 = rgb(5A2F3A)
+$color12 = rgb(4B4E53)
+$color13 = rgb(847A80)
+$color14 = rgb(8C8086)
+$color15 = rgb(BDB7BA)
