--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -22,3 +22,6 @@ exec-once = waybar
 # exec-once = wl-paste --watch cliphist store
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+
+# Updates
+exec-once = updates
