--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -17,7 +17,7 @@ general {
 
 background {
     monitor =
-    path = ~/.cache/swww/wp_blurred.png
+    path = ~/.cache/swww/.wp_blurred.png
     blur_passes = 0
 }
 
@@ -38,7 +38,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = FiraCode Nerd Font
-  position = -10, 355
+  position = -15, 355
   halign = right
   valign = center
 }
@@ -49,7 +49,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
   font_family = SF Pro Text
-  position = -50, 353
+  position = -55, 355
   halign = right
   valign = center
 }
