--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule ".zsh/zsh-history-substring-search"]
 	path = .zsh/zsh-history-substring-search
 	url = https://github.com/zsh-users/zsh-history-substring-search.git
+[submodule ".zsh/zsh-256color"]
+	path = .zsh/zsh-256color
+	url = https://github.com/chrissicool/zsh-256color
+[submodule ".zsh/zsh-defer"]
+	path = .zsh/zsh-defer
+	url = https://github.com/romkatv/zsh-defer.git
