--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,18 +1,18 @@
-$background = rgb(020506)
-$foreground = rgb(D7D3D5)
-$color0 = rgb(020506)
-$color1 = rgb(0D191D)
-$color2 = rgb(251C22)
-$color3 = rgb(43232C)
-$color4 = rgb(383A3E)
-$color5 = rgb(635B60)
-$color6 = rgb(696064)
-$color7 = rgb(BDB7BA)
-$color8 = rgb(848082)
-$color9 = rgb(112126)
-$color10 = rgb(31252D)
-$color11 = rgb(5A2F3A)
-$color12 = rgb(4B4E53)
-$color13 = rgb(847A80)
-$color14 = rgb(8C8086)
-$color15 = rgb(BDB7BA)
+$background = rgb(131214)
+$foreground = rgb(EFEFF0)
+$color0 = rgb(131214)
+$color1 = rgb(47444C)
+$color2 = rgb(4C4A51)
+$color3 = rgb(696166)
+$color4 = rgb(6C6B70)
+$color5 = rgb(97979A)
+$color6 = rgb(9C9CA0)
+$color7 = rgb(DFDFE2)
+$color8 = rgb(9C9C9E)
+$color9 = rgb(5E5B65)
+$color10 = rgb(65626C)
+$color11 = rgb(8C8288)
+$color12 = rgb(908E96)
+$color13 = rgb(C9C9CE)
+$color14 = rgb(D0D0D5)
+$color15 = rgb(DFDFE2)
