--- a/.config/alacritty/themes/wallust.toml
+++ b/.config/alacritty/themes/wallust.toml
@@ -1,30 +1,30 @@
 
 [colors.primary]
-background = '#020506'
-foreground = '#D7D3D5'
+background = '#131214'
+foreground = '#EFEFF0'
 
 [colors.cursor]
-text = '#BDB7BA'
-cursor = '#D7D3D5'
+text = '#DFDFE2'
+cursor = '#EFEFF0'
 
 # Normal colors
 [colors.normal]
-black   = '#848082'
-red     = '#112126'
-green   = '#31252D'
-yellow  = '#5A2F3A'
-blue    = '#4B4E53'
-magenta = '#847A80'
-cyan    = '#8C8086'
-white   = '#BDB7BA'
+black   = '#9C9C9E'
+red     = '#5E5B65'
+green   = '#65626C'
+yellow  = '#8C8288'
+blue    = '#908E96'
+magenta = '#C9C9CE'
+cyan    = '#D0D0D5'
+white   = '#DFDFE2'
 
 # Bright colors
 [colors.bright]
-black   = '#020506'
-red     = '#0D191D'
-green   = '#251C22'
-yellow  = '#43232C'
-blue    = '#383A3E'
-magenta = '#635B60'
-cyan    = '#696064'
-white   = '#BDB7BA'
+black   = '#131214'
+red     = '#47444C'
+green   = '#4C4A51'
+yellow  = '#696166'
+blue    = '#6C6B70'
+magenta = '#97979A'
+cyan    = '#9C9CA0'
+white   = '#DFDFE2'
