--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -16,7 +16,7 @@ bind = $MOD SHIFT, W, exec, wallpaper
 # Shortcuts
 bind = $MOD, RETURN, exec, alacritty
 bind = $MOD, D, exec, dolphin
-bind = $MOD, SPACE, exec, rofi -show drun -replace
+bind = $MOD, SPACE, exec, pkill rofi || rofi -show drun
 bind = $MOD SHIFT, R, exec, hyprctl reload
 bind = SHIFT $MOD , Q, exec, hyprctl dispatch exit
 bind = CTRL $MOD , Q, exec, hyprlock
