--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -57,9 +57,9 @@ windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(firefox)$ title:^(Firefox - Choose User Profile)$
 windowrulev2 = float,class:^([Aa]lacritty|kitty)$
-windowrulev2 = float,class:^([Aa]lacritty|kitty)$,title:^(top)$
-windowrulev2 = float,class:^([Aa]lacritty|kitty)$,title:^(btop)$
-windowrulev2 = float,class:^([Aa]lacritty|kitty)$,title:^(htop)$
+windowrulev2 = float,class:^(kitty)$,title:^(top)$
+windowrulev2 = float,class:^(kitty)$,title:^(btop)$
+windowrulev2 = float,class:^(kitty)$,title:^(htop)$
 windowrulev2 = float,class:^(vlc)$
 windowrulev2 = float,class:^(kvantummanager)$
 windowrulev2 = float,class:^(qt5ct)$
@@ -120,3 +120,4 @@ layerrule = ignorezero, waybar
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
 layerrule = xray 1, rofi
+layerrule = animation popin 90%, swww
