--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,9 +10,10 @@ $configs = $HOME/.config/hypr/configs
 $scripts = $HOME/.config/hypr/bin
 
 # Sourcing configs
+source= $configs/colors.conf
+source= $configs/monitors.conf
 source= $configs/env.conf
 source= $configs/startup.conf
-source= $configs/monitors.conf
 source= $configs/rules.conf
 source= $configs/binds.conf
 source= $configs/general.conf
