--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,9 +143,9 @@ source = auto
 gradient = 1
 
 gradient_count = 3
-gradient_color_1 = '#696166'
-gradient_color_2 = '#908E96'
-gradient_color_3 = '#C9C9CE'
+gradient_color_1 = '#80d4d7'
+gradient_color_2 = '#b0cccc'
+gradient_color_3 = '#dde4e3'
 
 [color]
 
