--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -6,8 +6,6 @@
 # ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
                                                                   
-$hypr=~/.config/hypr/bin
-
 general {
     hide_cursor = true
     no_fade_in = false
@@ -17,55 +15,42 @@ general {
 
 background {
     monitor =
-    path = ~/.cache/swww/.wp_blurred.png
+    path = $HOME/.cache/swww/.wp_blurred.png
     blur_passes = 0
 }
 
 label {
   monitor = 
-  text = cmd[update:1000] echo "$($hypr/song-status)"
+  text = cmd[update:1000] echo "$(song-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 12
   font_family = SF Pro Text
-  position = 10, 355
+  position = 10, 365
   halign = left
   valign = center
 }
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$($hypr/network-status)"
+  text = cmd[update:1000] echo "$(battery-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 14
-  font_family = FiraCode Nerd Font
-  position = -15, 355
+  font_family = SF Pro Text
+  position = -50, 365
   halign = right
   valign = center
 }
 
 label {
   monitor =
-  text = cmd[update:1000] echo "$($hypr/battery-status)"
+  text = cmd[update:1000] echo "$(network-status)"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 14
-  font_family = SF Pro Text
-  position = -55, 355
+  font_size = 24
+  font_family = CaskaydiaCove Nerd Font Mono
+  position = -10, 365
   halign = right
   valign = center
 }
-
-# works but slow asf
-#
-# label {
-#     monitor =
-#     text = cmd[update:1000] echo "$($hypr/weather)"
-#     color = rgba(255, 255, 255, 1)
-#     font_size = 16
-#     font_family = SF Pro Text 
-#     position = 0, 80
-#     halign = center
-#     valign = center
-# }
 
 label {
   monitor =
@@ -73,7 +58,7 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
   font_family = SF Pro Display Bold
-  position = 0, 260
+  position = 0, 250
   halign = center
   valign = center
 }
@@ -84,14 +69,14 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 93
   font_family = SF Pro Display Bold
-  position = 0, 120
+  position = 0, 170
   halign = center
   valign = center
 }
 
 image {
     monitor =
-    path = ~/.config/hypr/images/user.png 
+    path = $HOME/.config/hypr/images/user.png 
     border_color = 0xffdddddd
     border_size = 0
     size = 73
@@ -99,9 +84,9 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd = 
-    position = 0, -220
+    position = 0, 105
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
@@ -110,9 +95,9 @@ label {
     color = rgba(242, 243, 244, 0.75)
     font_size = 12
     font_family = SF Pro Display Bold
-    position = 0, -270
+    position = 0, 80
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
@@ -121,7 +106,7 @@ label {
     color = rgba(242, 243, 244, 0.75)
     font_size = 10
     font_family = SF Pro Display
-    position = 0, 40
+    position = 0, 20
     halign = center
     valign = bottom
 }
@@ -143,7 +128,7 @@ input-field {
     fail_text = $FAIL <b>($ATTEMPTS)</b>
     fail_transition = 300
     hide_input = false
-    position = 0, 60
+    position = 0, 40
     halign = center
     valign = bottom
 }
