--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -102,4 +102,4 @@ binde = , xf86MonBrightnessDown, exec, brightness --dec
 binde = , xf86MonBrightnessUp, exec, brightness --inc
 
 # Power Button
-bind = , xf86PowerOff, exec, wlogout -b 2
+bind = , xf86PowerOff, exec, pkill rofi || $HOME/.config/rofi/scripts/menu
