--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -5,25 +5,53 @@
 # ██╔═██╗ ██╔══╝    ╚██╔╝  ██╔══██╗██║██║╚██╗██║██║  ██║╚════██║
 # ██║  ██╗███████╗   ██║   ██████╔╝██║██║ ╚████║██████╔╝███████║
 # ╚═╝  ╚═╝╚══════╝   ╚═╝   ╚═════╝ ╚═╝╚═╝  ╚═══╝╚═════╝ ╚══════╝
-                                                              
+
 
 # Main modifier
 $MOD = SUPER
 
-# Wallpaper
-bind = $MOD SHIFT, W, exec, wallpaper
+# Apps
+$file_manager = dolphin
+$terminal = alacritty
+$browser = firefox
 
 # Shortcuts
-bind = $MOD, RETURN, exec, alacritty
-bind = $MOD, D, exec, dolphin
+bind = $MOD, RETURN, exec, $terminal
+bind = $MOD, F, exec, $file_manager
 bind = $MOD, SPACE, exec, pkill rofi || rofi -show drun
 bind = $MOD SHIFT, R, exec, hyprctl reload
 bind = SHIFT $MOD , Q, exec, hyprctl dispatch exit
 bind = CTRL $MOD , Q, exec, hyprlock
 
+# Wallpaper
+bind = $MOD SHIFT, W, exec, wallpaper
+
+# Screenshots
+bind = , Print, exec, screenshot --selection
+bind = SHIFT, Print, exec, screenshot --full
+
+# Volume
+bindel = , xf86audioraisevolume, exec, volume --inc
+bindel = , xf86audiolowervolume, exec, volume --dec
+bindl = , xf86AudioMicMute, exec, volume --toggle-mic
+bindl = , xf86audiomute, exec, volume --toggle
+
+# Media
+bind = , XF86AudioPlay, exec, playerctl play-pause
+bind = , XF86AudioPause, exec, playerctl play-pause
+bind = , XF86AudioNext, exec, playerctl next
+bind = , XF86AudioPrev, exec, playerctl previous
+
+# Brightness
+binde = , xf86MonBrightnessDown, exec, brightness --dec
+binde = , xf86MonBrightnessUp, exec, brightness --inc
+
+# Lid
+bindl= , switch:off:Lid Switch, exec, systemctl suspend
+
 # Window Management
 bind = $MOD, Q, killactive
-bind = $MOD, F, fullscreen
+bind = $MOD SHIFT, F, fullscreen, 0
 bind = $MOD, Tab, togglefloating
 bind = $MOD, P, pseudo # dwindle
 bind = $MOD, S, togglesplit # dwindle
@@ -78,28 +106,3 @@ bind = $MOD SHIFT, 7, movetoworkspace, 7
 bind = $MOD SHIFT, 8, movetoworkspace, 8
 bind = $MOD SHIFT, 9, movetoworkspace, 9
 bind = $MOD SHIFT, 0, movetoworkspace, 10
-
-
-# Screenshots
-bind = , Print, exec, screenshot --selection
-bind = SHIFT, Print, exec, screenshot --full
-
-# Media Keys
-bindel = , xf86audioraisevolume, exec, volume --inc
-bindel = , xf86audiolowervolume, exec, volume --dec
-bindl = , xf86AudioMicMute, exec, volume --toggle-mic
-bindl = , xf86audiomute, exec, volume --toggle
-
-bindl = , xf86AudioPlayPause, exec, mediactrl --pause
-bindl = , xf86AudioPause, exec, mediactrl --pause
-bindl = , xf86AudioPlay, exec, mediactrl --pause
-bindl = , xf86AudioNext, exec, mediactrl --nxt
-bindl = , xf86AudioPrev, exec, mediactrl --prv
-bindl = , xf86audiostop, exec, mediactrl --stop
-
-# Brightness
-binde = , xf86MonBrightnessDown, exec, brightness --dec
-binde = , xf86MonBrightnessUp, exec, brightness --inc
-
-# Power Button
-bind = , xf86PowerOff, exec, pkill rofi || $HOME/.config/rofi/scripts/menu
