--- a/.config/alacritty/themes/colors.toml
+++ b/.config/alacritty/themes/colors.toml
@@ -1,17 +1,17 @@
 [colors.primary]
-background = '#0e1415'
-foreground = '#dde4e3'
+background = '#191114'
+foreground = '#eedfe3'
 
 [colors.cursor]
-text = '#bec8c8'
-cursor = '#dde4e3'
+text = '#d4c2c8'
+cursor = '#eedfe3'
 
 [colors.normal]
 black   = '#4c4c4c'
 red     = '#ac8a8c'
 green   = '#8aac8b'
 yellow  = '#aca98a'
-blue    = '#80d4d7'
+blue    = '#fdb0d3'
 magenta = '#ac8aac'
 cyan    = '#8aacab'
 white   = '#f0f0f0'
