--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(0e1415)
+    $background = rgb(191114)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(2b3232)
+    $inverse_on_surface = rgb(372e31)
 
-    $inverse_primary = rgb(00696c)
+    $inverse_primary = rgb(884a69)
 
-    $inverse_surface = rgb(dde4e3)
+    $inverse_surface = rgb(eedfe3)
 
-    $on_background = rgb(dde4e3)
+    $on_background = rgb(eedfe3)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(003738)
+    $on_primary = rgb(521d3a)
 
-    $on_primary_container = rgb(9cf1f3)
+    $on_primary_container = rgb(ffd8e7)
 
-    $on_primary_fixed = rgb(002021)
+    $on_primary_fixed = rgb(380724)
 
-    $on_primary_fixed_variant = rgb(004f51)
+    $on_primary_fixed_variant = rgb(6d3351)
 
-    $on_secondary = rgb(1b3435)
+    $on_secondary = rgb(412a34)
 
-    $on_secondary_container = rgb(cce8e8)
+    $on_secondary_container = rgb(fdd9e7)
 
-    $on_secondary_fixed = rgb(041f20)
+    $on_secondary_fixed = rgb(2a151f)
 
-    $on_secondary_fixed_variant = rgb(324b4c)
+    $on_secondary_fixed_variant = rgb(59404b)
 
-    $on_surface = rgb(dde4e3)
+    $on_surface = rgb(eedfe3)
 
-    $on_surface_variant = rgb(bec8c8)
+    $on_surface_variant = rgb(d4c2c8)
 
-    $on_tertiary = rgb(1e314c)
+    $on_tertiary = rgb(4a2810)
 
-    $on_tertiary_container = rgb(d4e3ff)
+    $on_tertiary_container = rgb(ffdbc7)
 
-    $on_tertiary_fixed = rgb(061c36)
+    $on_tertiary_fixed = rgb(301401)
 
-    $on_tertiary_fixed_variant = rgb(354863)
+    $on_tertiary_fixed_variant = rgb(643e24)
 
-    $outline = rgb(899393)
+    $outline = rgb(9d8d92)
 
-    $outline_variant = rgb(3f4949)
+    $outline_variant = rgb(504348)
 
-    $primary = rgb(80d4d7)
+    $primary = rgb(fdb0d3)
 
-    $primary_container = rgb(004f51)
+    $primary_container = rgb(6d3351)
 
-    $primary_fixed = rgb(9cf1f3)
+    $primary_fixed = rgb(ffd8e7)
 
-    $primary_fixed_dim = rgb(80d4d7)
+    $primary_fixed_dim = rgb(fdb0d3)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(b0cccc)
+    $secondary = rgb(e0bdcb)
 
-    $secondary_container = rgb(324b4c)
+    $secondary_container = rgb(5b424d)
 
-    $secondary_fixed = rgb(cce8e8)
+    $secondary_fixed = rgb(fdd9e7)
 
-    $secondary_fixed_dim = rgb(b0cccc)
+    $secondary_fixed_dim = rgb(e0bdcb)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(068c8f)
+    $source_color = rgb(74415a)
 
-    $surface = rgb(0e1415)
+    $surface = rgb(191114)
 
-    $surface_bright = rgb(343a3a)
+    $surface_bright = rgb(40373a)
 
-    $surface_container = rgb(1a2121)
+    $surface_container = rgb(251d21)
 
-    $surface_container_high = rgb(252b2b)
+    $surface_container_high = rgb(30282b)
 
-    $surface_container_highest = rgb(2f3636)
+    $surface_container_highest = rgb(3b3236)
 
-    $surface_container_low = rgb(161d1d)
+    $surface_container_low = rgb(21191d)
 
-    $surface_container_lowest = rgb(090f0f)
+    $surface_container_lowest = rgb(130c0f)
 
-    $surface_dim = rgb(0e1415)
+    $surface_dim = rgb(191114)
 
-    $surface_variant = rgb(3f4949)
+    $surface_variant = rgb(504348)
 
-    $tertiary = rgb(b4c8e9)
+    $tertiary = rgb(f2bb99)
 
-    $tertiary_container = rgb(354863)
+    $tertiary_container = rgb(643e24)
 
-    $tertiary_fixed = rgb(d4e3ff)
+    $tertiary_fixed = rgb(ffdbc7)
 
-    $tertiary_fixed_dim = rgb(b4c8e9)
+    $tertiary_fixed_dim = rgb(f2bb99)
