--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,11 +1,11 @@
 
-#  ██████╗ ███████╗███╗   ██╗███████╗██████╗  █████╗ ██╗     
-# ██╔════╝ ██╔════╝████╗  ██║██╔════╝██╔══██╗██╔══██╗██║     
-# ██║  ███╗█████╗  ██╔██╗ ██║█████╗  ██████╔╝███████║██║     
-# ██║   ██║██╔══╝  ██║╚██╗██║██╔══╝  ██╔══██╗██╔══██║██║     
+#  ██████╗ ███████╗███╗   ██╗███████╗██████╗  █████╗ ██╗
+# ██╔════╝ ██╔════╝████╗  ██║██╔════╝██╔══██╗██╔══██╗██║
+# ██║  ███╗█████╗  ██╔██╗ ██║█████╗  ██████╔╝███████║██║
+# ██║   ██║██╔══╝  ██║╚██╗██║██╔══╝  ██╔══██╗██╔══██║██║
 # ╚██████╔╝███████╗██║ ╚████║███████╗██║  ██║██║  ██║███████╗
 #  ╚═════╝ ╚══════╝╚═╝  ╚═══╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝
-                                                           
+
 xwayland {
   force_zero_scaling = 1
 }
@@ -25,7 +25,7 @@ input {
   }
 
   special_fallthrough = true
-  follow_mouse = 1
+  follow_mouse = 0
 }
 
 gestures {
@@ -36,13 +36,13 @@ general {
   sensitivity = 1.00
   apply_sens_to_raw = 1
 
-  gaps_in = 1
+  gaps_in = 2
   gaps_out = 8
 
   border_size = 2
   resize_on_border = true
 
-  col.active_border = $primary
+  col.active_border = $primary $on_secondary $on_secondary $primary 90deg
   col.inactive_border = $background
 
   layout = dwindle
@@ -59,33 +59,31 @@ master {
 }
 
 misc {
-  new_window_takes_over_fullscreen = 2 # Leave fullscreen on new window
-  disable_hyprland_logo = true # Disable logo on desktop
-  disable_splash_rendering = true # Disable startup splashscreen
-  animate_mouse_windowdragging = false # Disable windowdragging animations
-  mouse_move_enables_dpms = true # Enables mouse move wakeup
-  mouse_move_focuses_monitor = false # Disables hover for monitor focus
-  focus_on_activate = true # Focusses windows which ask for activation (eg systray)
-  enable_swallow = true # Enable window swalling
+  new_window_takes_over_fullscreen = 2
+  disable_hyprland_logo = true
+  disable_splash_rendering = true
+  animate_mouse_windowdragging = false
+  mouse_move_enables_dpms = true
+  mouse_move_focuses_monitor = false
+  focus_on_activate = true
+  enable_swallow = true
   swallow_regex = ^(foot|kitty|[Aa]lacritty)$
   allow_session_lock_restore = true
-  vfr = 1 # Variable framerate
-  vrr = 1 # Variable refreshrate (freesync / gsync)
-  # render_ahead_of_time = true
-  # render_ahead_safezone = 9
+  vfr = 1
+  vrr = 1
 }
 
 decoration {
   rounding = 5
-	
+
   active_opacity = 1.0
   inactive_opacity = 0.9
   fullscreen_opacity = 1.0
-	
+
   dim_inactive = true
   dim_strength = 0.1
   dim_special = 0.8
-	
+
   drop_shadow = true
   shadow_range = 5
   shadow_render_power = 5
@@ -96,17 +94,13 @@ decoration {
     enabled = true
     size = 3
     passes = 4
-    noise = 0.01
-    xray = true
     ignore_opacity = true
     popups = true
-    popups_ignorealpha = 0.6
     new_optimizations = true
     special = false
   }
 }
 
-# source end-4 dots
 animations {
   enabled = yes
 
@@ -120,6 +114,7 @@ animations {
   animation = windowsIn, 1, 3, md3_decel, popin 60%
   animation = windowsOut, 1, 3, md3_accel, popin 60%
   animation = border, 1, 10, default
+  animation = borderangle, 1, 30, linear, loop
   animation = fade, 1, 3, md3_decel
   animation = layersIn, 1, 3, menu_decel, slide
   animation = layersOut, 1, 1.6, menu_accel
