--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -5,7 +5,7 @@
 # ██║███╗██║██║██║╚██╗██║██║  ██║██║   ██║██║███╗██║    ██╔══██╗██║   ██║██║     ██╔══╝  ╚════██║
 # ╚███╔███╔╝██║██║ ╚████║██████╔╝╚██████╔╝╚███╔███╔╝    ██║  ██║╚██████╔╝███████╗███████╗███████║
 #  ╚══╝╚══╝ ╚═╝╚═╝  ╚═══╝╚═════╝  ╚═════╝  ╚══╝╚══╝     ╚═╝  ╚═╝ ╚═════╝ ╚══════╝╚══════╝╚══════╝
-                                                                                               
+
 windowrulev2 = opacity 0.8,class:^(firefox)$
 windowrulev2 = opacity 0.8,class:^(Brave-browser)$
 windowrulev2 = opacity 0.8,class:^(Code|code-url-handler|code-insiders-url-handler|code-oss|codium|codium-url-handler|VSCodium)$
@@ -47,7 +47,7 @@ windowrulev2 = opacity 0.8,class:^(io.gitlab.adhami3310.Impression)$ # Impressio
 windowrulev2 = opacity 0.8,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 windowrulev2 = opacity 0.8,class:^(io.github.flattool.Warehouse)$ # Warehouse-Gtk
 
-windowrulev2 = float,title:^(Open File|Save File|Save Image|Save As)$
+windowrulev2 = float,title:^(Open File|Open files|Save File|Save Image|Save As)$
 windowrulev2 = float,title:^(File Upload)$
 windowrulev2 = float,class:^(org.kde.dolphin)$
 windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Progress Dialog — Dolphin)$
@@ -92,7 +92,7 @@ windowrulev2 = float,class:^(Spotify)$
 windowrulev2 = pin,title:^(Picture-in-Picture|Firefox)$
 
 windowrulev2 = size 50% 45%,title:^(neofetch|fastfetch)$
-windowrulev2 = size 50% 70%,title:^(Open File|Save File)$
+windowrulev2 = size 50% 70%,title:^(Open File|Open files|Save File)$
 windowrulev2 = size 60% 70%,title:^(Save As|Save Image)$
 windowrulev2 = size 70% 65%,class:^(org.kde.dolphin)$
 windowrulev2 = size 40% 50%,class:^(firefox)$,title:^(Firefox - Choose User Profile)$
@@ -104,7 +104,7 @@ windowrulev2 = size 35% 90%,class:^([Ss]team)$,title:^(Special Offers)$
 windowrulev2 = center,title:^(neofetch|fastfetch)$
 windowrulev2 = center 1,title:^(Open File|Save File|Save As|Save Image)$
 windowrulev2 = center 1,class:^(discord|WebCord)$
-windowrulev2 = center,class:^(Spotify)$
+windowrulev2 = center 1,class:^(Spotify)$
 windowrulev2 = center 1,class:^(steam)$,title:^(Special Offers)$
 windowrulev2 = center 1,class:^(steam)$,title:^(Friends List)$
 
@@ -117,7 +117,10 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
+layerrule = blurpopups, waybar
+
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
-layerrule = xray 1, rofi
+layerrule = animation popin, rofi
+
 layerrule = animation popin 90%, swww
