--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,11 +1,11 @@
 
 # ██╗  ██╗██╗   ██╗██████╗ ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗
 # ██║  ██║╚██╗ ██╔╝██╔══██╗██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝
-# ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ██║   ██║██║     █████╔╝ 
-# ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██║   ██║██║     ██╔═██╗ 
+# ███████║ ╚████╔╝ ██████╔╝██████╔╝██║     ██║   ██║██║     █████╔╝
+# ██╔══██║  ╚██╔╝  ██╔═══╝ ██╔══██╗██║     ██║   ██║██║     ██╔═██╗
 # ██║  ██║   ██║   ██║     ██║  ██║███████╗╚██████╔╝╚██████╗██║  ██╗
 # ╚═╝  ╚═╝   ╚═╝   ╚═╝     ╚═╝  ╚═╝╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝
-                                                                  
+
 general {
     hide_cursor = true
     no_fade_in = false
@@ -15,12 +15,12 @@ general {
 
 background {
     monitor =
-    path = $HOME/.cache/swww/.wp_blurred.png
+    path = $HOME/.cache/swww/blurred.png
     blur_passes = 0
 }
 
 label {
-  monitor = 
+  monitor =
   text = cmd[update:1000] echo "$(song-status)"
   color = rgba(242, 243, 244, 0.75)
   font_size = 12
@@ -58,32 +58,32 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
   font_family = SF Pro Display Bold
-  position = 0, 250
+  position = 0, 270
   halign = center
   valign = center
 }
 
 label {
-  monitor = 
+  monitor =
   text = cmd[update:1000] echo "$(date +"%I:%M")"
   color = rgba(242, 243, 244, 0.75)
   font_size = 93
   font_family = SF Pro Display Bold
-  position = 0, 170
+  position = 0, 200
   halign = center
   valign = center
 }
 
 image {
     monitor =
-    path = $HOME/.config/hypr/images/user.png 
+    path = $HOME/.config/hypr/images/user.png
     border_color = 0xffdddddd
     border_size = 0
     size = 73
     rounding = -1
     rotate = 0
     reload_time = -1
-    reload_cmd = 
+    reload_cmd =
     position = 0, 105
     halign = center
     valign = bottom
