--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -16,15 +16,13 @@ input {
   repeat_rate = 35
 
   touchpad {
-    disable_while_typing=true
-    natural_scroll=true
-    clickfinger_behavior=false
-    middle_button_emulation=true
+    natural_scroll = yes
     tap-to-click=true
-    drag_lock=false
+    disable_while_typing = true
+    clickfinger_behavior = true
+    scroll_factor = 0.5
   }
 
-  special_fallthrough = true
   follow_mouse = 0
 }
 
@@ -33,19 +31,19 @@ gestures {
 }
 
 general {
-  sensitivity = 1.00
-  apply_sens_to_raw = 1
-
   gaps_in = 2
   gaps_out = 8
-
+  gaps_workspaces = 50
   border_size = 2
-  resize_on_border = true
 
   col.active_border = $primary $on_secondary $on_secondary $primary 90deg
   col.inactive_border = $background
 
+  resize_on_border = true
+  no_focus_fallback = true
   layout = dwindle
+
+  resize_on_border = true
 }
 
 dwindle {
@@ -54,41 +52,25 @@ dwindle {
   smart_resizing = false
 }
 
-master {
-  new_status = master
-}
-
 misc {
-  new_window_takes_over_fullscreen = 2
-  disable_hyprland_logo = true
-  disable_splash_rendering = true
-  animate_mouse_windowdragging = false
-  mouse_move_enables_dpms = true
-  mouse_move_focuses_monitor = false
-  focus_on_activate = true
-  enable_swallow = true
-  swallow_regex = ^(foot|kitty|[Aa]lacritty)$
-  allow_session_lock_restore = true
   vfr = 1
   vrr = 1
+  focus_on_activate = true
+  animate_manual_resizes = false
+  animate_mouse_windowdragging = false
+  enable_swallow = true
+  swallow_regex = ^(foot|kitty|[Aa]lacritty)$
+
+  disable_hyprland_logo = true
+  # disable_splash_rendering = true
+  force_default_wallpaper = 0
+  new_window_takes_over_fullscreen = 2
+  allow_session_lock_restore = true
+  initial_workspace_tracking = false
 }
 
 decoration {
   rounding = 5
-
-  active_opacity = 1.0
-  inactive_opacity = 0.9
-  fullscreen_opacity = 1.0
-
-  dim_inactive = true
-  dim_strength = 0.1
-  dim_special = 0.8
-
-  drop_shadow = true
-  shadow_range = 5
-  shadow_render_power = 5
-  col.shadow = $background
-  col.shadow_inactive = 0x50000000
 
   blur {
     enabled = true
@@ -99,6 +81,16 @@ decoration {
     new_optimizations = true
     special = false
   }
+
+  drop_shadow = true
+  shadow_range = 5
+  shadow_render_power = 5
+  col.shadow = $background
+  col.shadow_inactive = 0x50000000
+
+  dim_inactive = true
+  dim_strength = 0.1
+  dim_special = 0
 }
 
 animations {
