--- a/.config/hypr/configs/rules.conf
+++ b/.config/hypr/configs/rules.conf
@@ -115,6 +115,7 @@ windowrulev2 = idleinhibit fullscreen, class:^(*)$
 windowrulev2 = idleinhibit fullscreen, title:^(*)$
 windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
+# Layer rules
 layerrule = blur, waybar
 layerrule = ignorezero, waybar
 layerrule = blurpopups, waybar
