--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,10 +1,7 @@
 
-#  ██████╗ ███████╗███╗   ██╗███████╗██████╗  █████╗ ██╗
-# ██╔════╝ ██╔════╝████╗  ██║██╔════╝██╔══██╗██╔══██╗██║
-# ██║  ███╗█████╗  ██╔██╗ ██║█████╗  ██████╔╝███████║██║
-# ██║   ██║██╔══╝  ██║╚██╗██║██╔══╝  ██╔══██╗██╔══██║██║
-# ╚██████╔╝███████╗██║ ╚████║███████╗██║  ██║██║  ██║███████╗
-#  ╚═════╝ ╚══════╝╚═╝  ╚═══╝╚══════╝╚═╝  ╚═╝╚═╝  ╚═╝╚══════╝
+# ░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░
+# ░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░█░░
+# ░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀
 
 xwayland {
   force_zero_scaling = 1
@@ -19,7 +16,7 @@ input {
     natural_scroll = yes
     tap-to-click=true
     disable_while_typing = true
-    clickfinger_behavior = true
+    clickfinger_behavior = false
     scroll_factor = 0.5
   }
 
