--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,9 +143,9 @@ source = auto
 gradient = 1
 
 gradient_count = 3
-gradient_color_1 = '#ffb59d'
-gradient_color_2 = '#e7bdb1'
-gradient_color_3 = '#f1dfda'
+gradient_color_1 = '#fdb0d3'
+gradient_color_2 = '#e0bdcb'
+gradient_color_3 = '#eedfe3'
 
 [color]
 
