--- a/.config/hypr/configs/colors.conf
+++ b/.config/hypr/configs/colors.conf
@@ -1,98 +1,98 @@
 
-    $background = rgb(1a110f)
+    $background = rgb(191114)
 
     $error = rgb(ffb4ab)
 
     $error_container = rgb(93000a)
 
-    $inverse_on_surface = rgb(392e2b)
+    $inverse_on_surface = rgb(372e31)
 
-    $inverse_primary = rgb(8f4c36)
+    $inverse_primary = rgb(884a69)
 
-    $inverse_surface = rgb(f1dfda)
+    $inverse_surface = rgb(eedfe3)
 
-    $on_background = rgb(f1dfda)
+    $on_background = rgb(eedfe3)
 
     $on_error = rgb(690005)
 
     $on_error_container = rgb(ffdad6)
 
-    $on_primary = rgb(55200d)
+    $on_primary = rgb(521d3a)
 
-    $on_primary_container = rgb(ffdbd0)
+    $on_primary_container = rgb(ffd8e7)
 
-    $on_primary_fixed = rgb(390b00)
+    $on_primary_fixed = rgb(380724)
 
-    $on_primary_fixed_variant = rgb(723521)
+    $on_primary_fixed_variant = rgb(6d3351)
 
-    $on_secondary = rgb(442a21)
+    $on_secondary = rgb(412a34)
 
-    $on_secondary_container = rgb(ffdbd0)
+    $on_secondary_container = rgb(fdd9e7)
 
-    $on_secondary_fixed = rgb(2c160e)
+    $on_secondary_fixed = rgb(2a151f)
 
-    $on_secondary_fixed_variant = rgb(5d4036)
+    $on_secondary_fixed_variant = rgb(59404b)
 
-    $on_surface = rgb(f1dfda)
+    $on_surface = rgb(eedfe3)
 
-    $on_surface_variant = rgb(d8c2bc)
+    $on_surface_variant = rgb(d4c2c8)
 
-    $on_tertiary = rgb(3a3005)
+    $on_tertiary = rgb(4a2810)
 
-    $on_tertiary_container = rgb(f4e2a7)
+    $on_tertiary_container = rgb(ffdbc7)
 
-    $on_tertiary_fixed = rgb(221b00)
+    $on_tertiary_fixed = rgb(301401)
 
-    $on_tertiary_fixed_variant = rgb(52461a)
+    $on_tertiary_fixed_variant = rgb(643e24)
 
-    $outline = rgb(a08d87)
+    $outline = rgb(9d8d92)
 
-    $outline_variant = rgb(53433f)
+    $outline_variant = rgb(504348)
 
-    $primary = rgb(ffb59d)
+    $primary = rgb(fdb0d3)
 
-    $primary_container = rgb(723521)
+    $primary_container = rgb(6d3351)
 
-    $primary_fixed = rgb(ffdbd0)
+    $primary_fixed = rgb(ffd8e7)
 
-    $primary_fixed_dim = rgb(ffb59d)
+    $primary_fixed_dim = rgb(fdb0d3)
 
     $scrim = rgb(000000)
 
-    $secondary = rgb(e7bdb1)
+    $secondary = rgb(e0bdcb)
 
-    $secondary_container = rgb(604239)
+    $secondary_container = rgb(5b424d)
 
-    $secondary_fixed = rgb(ffdbd0)
+    $secondary_fixed = rgb(fdd9e7)
 
-    $secondary_fixed_dim = rgb(e7bdb1)
+    $secondary_fixed_dim = rgb(e0bdcb)
 
     $shadow = rgb(000000)
 
-    $source_color = rgb(f25f2b)
+    $source_color = rgb(74415a)
 
-    $surface = rgb(1a110f)
+    $surface = rgb(191114)
 
-    $surface_bright = rgb(423733)
+    $surface_bright = rgb(40373a)
 
-    $surface_container = rgb(271d1b)
+    $surface_container = rgb(251d21)
 
-    $surface_container_high = rgb(322825)
+    $surface_container_high = rgb(30282b)
 
-    $surface_container_highest = rgb(3d322f)
+    $surface_container_highest = rgb(3b3236)
 
-    $surface_container_low = rgb(231917)
+    $surface_container_low = rgb(21191d)
 
-    $surface_container_lowest = rgb(140c0a)
+    $surface_container_lowest = rgb(130c0f)
 
-    $surface_dim = rgb(1a110f)
+    $surface_dim = rgb(191114)
 
-    $surface_variant = rgb(53433f)
+    $surface_variant = rgb(504348)
 
-    $tertiary = rgb(d7c68d)
+    $tertiary = rgb(f2bb99)
 
-    $tertiary_container = rgb(52461a)
+    $tertiary_container = rgb(643e24)
 
-    $tertiary_fixed = rgb(f4e2a7)
+    $tertiary_fixed = rgb(ffdbc7)
 
-    $tertiary_fixed_dim = rgb(d7c68d)
+    $tertiary_fixed_dim = rgb(f2bb99)
