--- a/.config/hypr/configs/startup.conf
+++ b/.config/hypr/configs/startup.conf
@@ -1,10 +1,7 @@
 
-# ███████╗████████╗ █████╗ ██████╗ ████████╗██╗   ██╗██████╗ 
-# ██╔════╝╚══██╔══╝██╔══██╗██╔══██╗╚══██╔══╝██║   ██║██╔══██╗
-# ███████╗   ██║   ███████║██████╔╝   ██║   ██║   ██║██████╔╝
-# ╚════██║   ██║   ██╔══██║██╔══██╗   ██║   ██║   ██║██╔═══╝ 
-# ███████║   ██║   ██║  ██║██║  ██║   ██║   ╚██████╔╝██║     
-# ╚══════╝   ╚═╝   ╚═╝  ╚═╝╚═╝  ╚═╝   ╚═╝    ╚═════╝ ╚═╝                                                                
+# ░█▀▀░▀█▀░█▀█░█▀▄░▀█▀░█░█░█▀█
+# ░▀▀█░░█░░█▀█░█▀▄░░█░░█░█░█▀▀
+# ░▀▀▀░░▀░░▀░▀░▀░▀░░▀░░▀▀▀░▀░░                                                          
 
 # Core
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 & udiskie &
@@ -23,5 +20,5 @@ exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
-# Updates
+# Check updates
 exec-once = updates
